--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "bootstrap": "^4.0.0",
     "jquery": "^3.3.1",
     "popper.js": "^1.12.9",
-    "swiper": "^4.1.6"
+    "swiper": "^4.1.6",
+    "yargs": "^11.0.0"
   }
 }
